--- a/www/index.html
+++ b/www/index.html
@@ -18,9 +18,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+	<!--  pouchdb -->
+   <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
     <!-- your app's js -->
+
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/config.js"></script>
   </head>
 
