--- a/www/index.html
+++ b/www/index.html
@@ -5,23 +5,25 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
 	<!--  pouchdb -->
    <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
-    <!-- your app's js -->
 
+   <!--  translations TODO : put in libs ? -->
+   <script src="lib/angular-translate.min.js"></script>
+
+    <!-- your app's js -->
+<script src="js/translations.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
@@ -29,6 +31,8 @@
   </head>
 
   <body ng-app="starter">
+
+
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
