added rating and comment

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -21,6 +22,8 @@
 
    <!--  translations TODO : put in libs ? -->
    <script src="lib/angular-translate.min.js"></script>
+   <!-- 5 stars rating system -->
+   <script src="lib/ionic-rating/ionic-rating.js"></script>
 
     <!-- your app's js -->
 <script src="js/translations.js"></script>
