--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,8 @@
 
 	<!--  pouchdb -->
    <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
-
+   <script src="lib/pouchdb-replication-stream/dist/pouchdb.replication-stream.min.js"></script>
+    <script src="lib/memorystream/memorystream.js"></script>
    <!--  translations TODO : put in libs ? -->
    <script src="lib/angular-translate.min.js"></script>
    <!-- 5 stars rating system -->
