pouchdb back up with memorystream
not fully implemented

--- a/www/index.html
+++ b/www/index.html
@@ -18,10 +18,11 @@
     <script src="cordova.js"></script>
 
 	<!--  pouchdb -->
+  <script src="lib/memorystream.js"></script>
    <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
    <script src="lib/pouchdb-replication-stream/dist/pouchdb.replication-stream.min.js"></script>
-    <script src="lib/memorystream/memorystream.js"></script>
-   <!--  translations TODO : put in libs ? -->
+
+
    <script src="lib/angular-translate.min.js"></script>
    <!-- 5 stars rating system -->
    <script src="lib/ionic-rating/ionic-rating.js"></script>
