--- a/www/index.html
+++ b/www/index.html
@@ -14,8 +14,11 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
 
-    <!-- cordova script (this will be a 404 during development) -->
+
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+        <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    
 
 	<!--  pouchdb -->
   <script src="lib/memorystream.js"></script>
