--- a/www/index.html
+++ b/www/index.html
@@ -13,19 +13,20 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-
+ 
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
         <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     
-
+ 
 	<!--  pouchdb -->
   <script src="lib/memorystream.js"></script>
    <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
    <script src="lib/pouchdb-replication-stream/dist/pouchdb.replication-stream.min.js"></script>
+   <script src="lib/pouchdb-load/dist/pouchdb.load.js"></script>
 
-
+ 
    <script src="lib/angular-translate.min.js"></script>
    <!-- 5 stars rating system -->
    <script src="lib/ionic-rating/ionic-rating.js"></script>
