gulp copylibs + upgraded npm package dependencies

--- a/www/index.html
+++ b/www/index.html
@@ -19,12 +19,14 @@
         <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     
- 
-	<!--  pouchdb -->
+
+
   <script src="lib/memorystream.js"></script>
-   <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
-   <script src="lib/pouchdb-replication-stream/dist/pouchdb.replication-stream.min.js"></script>
-   <script src="lib/pouchdb-load/dist/pouchdb.load.js"></script>
+
+      <!--  pouchdb -->
+   <script src="lib/pouchdb.min.js"></script>
+   <script src="lib/pouchdb.replication-stream.min.js"></script>
+   <script src="lib/pouchdb.load.min.js"></script>
 
  
    <script src="lib/angular-translate.min.js"></script>
