--- a/www/index.html
+++ b/www/index.html
@@ -21,12 +21,15 @@
     
 
 
+
+
   <script src="lib/memorystream.js"></script>
 
       <!--  pouchdb -->
    <script src="lib/pouchdb.min.js"></script>
    <script src="lib/pouchdb.replication-stream.min.js"></script>
    <script src="lib/pouchdb.load.min.js"></script>
+
 
  
    <script src="lib/angular-translate.min.js"></script>
@@ -44,7 +47,12 @@
 
   <body ng-app="starter">
 
-
     <ion-nav-view></ion-nav-view>
+    
+    <div id="fb-root"></div>
+<!-- facebook plugin for browser TODO : remove befroe going on production --> 
+<script src="https://connect.facebook.net/en_US/sdk.js">
+<!-- supllementary js to remove later 
+<script src="js/facebhook.js">
   </body>
 </html>
