latest from work

--- a/www/index.html
+++ b/www/index.html
@@ -16,28 +16,27 @@
  
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-        <!-- cordova script (this will be a 404 during development) -->
+     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-    
 
+    <!-- memorystream is used to export pouchdb databases -->  
+    <script src="lib/memorystream.js"></script>
 
-
-
-  <script src="lib/memorystream.js"></script>
-
-      <!--  pouchdb -->
+    <!--  pouchdb -->
    <script src="lib/pouchdb.min.js"></script>
    <script src="lib/pouchdb.replication-stream.min.js"></script>
    <script src="lib/pouchdb.load.min.js"></script>
 
 
- 
+
+
+    <!-- angular translate -->
    <script src="lib/angular-translate.min.js"></script>
-   <!-- 5 stars rating system -->
+    <!-- 5 stars rating system -->
    <script src="lib/ionic-rating/ionic-rating.js"></script>
 
     <!-- your app's js -->
-<script src="js/translations.js"></script>
+    <script src="js/translations.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
