--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval' ">
     <title></title>
 
 
@@ -11,7 +12,7 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script> 
 
  
 
@@ -49,9 +50,6 @@
     <ion-nav-view></ion-nav-view>
     
     <div id="fb-root"></div>
-<!-- facebook plugin for browser TODO : remove befroe going on production --> 
-<script src="https://connect.facebook.net/en_US/sdk.js">
-<!-- supllementary js to remove later 
-<script src="js/facebhook.js">
+
   </body>
 </html>
